[tool.poetry]
name = "uranium_quantum"
version = "0.3.12"
description = "Support Python libraries for Uranium quantum computing platform."
authors = ["Radu Marginean <radu.marg@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://transilvania-quantum.org/uranium"
repository = "https://github.com/radumarg/uranium_quantum"
keywords = ["uranium", "quantum", "computing"]

include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
PyYAML = "^5.4.1"
numpy = "^1.22.2"
qiskit = "^0.36.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
